<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="@dimen/global_padding"
    tools:context=".WeatherActivity">

    <LinearLayout
        android:id="@+id/llWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRegion"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center">
        </TextView>

        <ImageView
            android:id="@+id/ivWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground">
        </ImageView>

        <TextView
            android:id="@+id/tvHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvHour"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTemp"
            android:textSize="120sp"
            android:gravity="center">
        </TextView>

        <LinearLayout
            android:id="@+id/llHumidityWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/llHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvHumidity"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>

                <TextView
                    android:id="@+id/tvHumidityValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvHumidityValue"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvWind"
                    android:textAlignment="center"
                    android:layout_weight="1">
                </TextView>

                <TextView
                    android:id="@+id/tvRainValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRainValue"
                    android:textAlignment="center"
                    android:layout_weight="1">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescription"
            android:gravity="center">

        </TextView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>