<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/global_padding"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        tools:ignore="MissingConstraints">

    </TextView>

    <EditText
        android:id="@+id/etLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etLatitudf"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        android:inputType="numberSigned|numberDecimal">
    </EditText>

    <EditText
        android:id="@+id/etLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etLongitud"
        app:layout_constraintTop_toBottomOf="@id/etLatitud"
        android:inputType="numberSigned|numberDecimal">
    </EditText>

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConsultar"
        app:layout_constraintTop_toBottomOf="@id/etLongitud">
    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>